5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4005/executions/1635_2445.log
== TEST (2019-04-15 13:34:23) 
-- CODE:
escala=(input("C/F:"))
temp=float(input("temp:"))
C1= 5/9(temp-32)
c2=(temp*9/5)+32
if(escala==F):
	print(C1)
	if(escala==C):
		print(c2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    C1= 5/9(temp-32)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:35:18) 
-- CODE:
escala=(input("C/F:"))
temp=float(input("temp:"))
C1= 5/9(temp-32)
c2=(temp*9/5)+32
if(escala==F):
	print(C1)
	if(escala==C):
		print(c2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    C1= 5/9(temp-32)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:36:04) 
-- CODE:
escala=(input("C/F:"))
temp=float(input("temp:"))
C1= (temp-32)*5/9
c2=(temp*9/5)+32
if(escala==F):
	print(C1)
	if(escala==C):
		print(c2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(escala==F):
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:37:11) 
-- CODE:
escala=(input("C/F:"))
temp=float(input("temp:"))
C1= (temp-32)*5/9
c2=(temp*9/5)+32
if(escala=="F"):
	print(C1)
	if(escala=="C"):
		print(c2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(escala==F):
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:38:24) 
-- CODE:
escala=(input("C/F:"))
temp=float(input("temp:"))
C1= (temp-32)*5/9
c2=(temp*9/5)+32
if(escala=="F"):
	print(round(C1,2))
	if(escala=="C"):
		print(round(c2,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(escala==F):
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:38:36) 
-- CODE:
escala=(input("C/F:"))
temp=float(input("temp:"))
C1= (temp-32)*5/9
c2=(temp*9/5)+32
if(escala=="F"):
	print(round(C1,2))
	if(escala=="C"):
		print(round(c2,2))
-- EXECUTION TIME:
0.17589
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:

-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:38:48) 
-- CODE:
escala=(input("C/F:"))
temp=float(input("temp:"))
C1= (temp-32)*5/9
c2=(temp*9/5)+32
if(escala=="F"):
	print(round(C1,2))
	if(escala=="C"):
	print(round(c2,2))
-- ERROR:
File "XXXX", line 8
    print(round(c2,2))
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:38:57) 
-- CODE:
escala=(input("C/F:"))
temp=float(input("temp:"))
C1= (temp-32)*5/9
c2=(temp*9/5)+32
if(escala=="F"):
	print(round(C1,2))
if(escala=="C"):
	print(round(c2,2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:39:05) 
-- CODE:
escala=(input("C/F:"))
temp=float(input("temp:"))
C1= (temp-32)*5/9
c2=(temp*9/5)+32
if(escala=="F"):
	print(round(C1,2))
if(escala=="C"):
	print(round(c2,2))
-- EXECUTION TIME:
0.229165
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
